AC_INIT([_prolog], [0.0.1], [bbrietzke+github@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_DEFINE([MAX_HEAP], [20], [MAX_HEAP])
AC_DEFINE([MAX_STACK], [20], [MAX_STACK])
AC_DEFINE([MAX_REGISTERS], [5], [MAX_REGISTERS])
AC_OUTPUT

